--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BodyBoost"
+        android:theme="@style/Base.Theme.BodyBoost"
         tools:targetApi="31">
 
 <!--        мед-->
